# Roblox-Studio-Internal

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OptiStudioPatcher.vcxproj  OptiStudioPatcher.vcxproj.filters  PatcherLib.vcxproj  PatcherLib.vcxproj.filters  README.md  RobloxStudioPatcher.sln  RobloxStudioPatcher.vcxproj  RobloxStudioPatcher.vcxproj.filters  SECURITY.md  SmartPatcher.vcxproj  SmartPatcher.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  optipatch.c  patcher.c  vcpkg-configuration.json  vcpkg.json
Program/: RobloxStudioBootstrapper.c  optipatch.c  patcher.c  patcherlib.c  patcherlib.h  smartpatcher.c
Update/: patches.hex  signatures.hex
